<resources>
    <string name="app_name">Slumgum</string>
    <string name="google_maps_key">AIzaSyB-UKQIXCb0MfPCEZ_8igNwjyVqoab7pro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Smith</string>
    <string name="nav_header_subtitle">john@smith.me</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_refresh">Refresh</string>

    <!-- EDIT TEXTS -->
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Description</string>

    <!-- CTAs-->
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Send password reset email</string>
    <string name="report_swarm">Report swarm</string>
    <string name="choose_photo">Choose photo</string>

    <!-- MESSAGES & ERRORS -->
    <string name="enter_all_details">Please, enter all details.</string>
    <string name="authentication_failed">Incorrect email or password, please try again.</string>
    <string name="general_error">An error occurred, please try again.</string>
    <string name="verification_email_sent_error">Failed to send verification email.</string>
    <string name="verification_email_sent_success">Verification email sent to %s.</string>
    <string name="reset_email_sent_success">Email sent. Please check your inbox to reset the password.</string>
    <string name="reset_email_sent_failed">No user found with this email address.</string>
    <string name="verify_your_email">Please, verify your email address. Check your inbox!</string>
    <string name="connection_unavailable">Connection not available, please try again later.</string>
    <string name="loading_swarms">Loading swarms…</string>

</resources>
